--- a/deployment/k8s/scale.yaml
+++ b/deployment/k8s/scale.yaml
@@ -8,6 +8,7 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: tape-manager
+    namespace: tape-manager
   minReplicas: 1
   maxReplicas: 20
   targetCPUUtilizationPercentage: 10
