--- a/deployment/k8s/deployment.yaml
+++ b/deployment/k8s/deployment.yaml
@@ -38,10 +38,8 @@ spec:
             path: /health
             port: 80
         resources:
-          limits:
-            cpu: 500m
           requests:
-            cpu: 200m
+            cpu: "250m"
       dnsPolicy: ClusterFirst
       restartPolicy: Always
 
